--- a/Data_python.ipynb
+++ b/Data_python.ipynb
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
        "2  2025-03-16T14:15:00             320.0              1350.0"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_to_add = pd.DataFrame({\n",
+    "    'Timestamp': [\"2025-03-16T14:20:00\", \"2025-03-16T14:25:00\", \"2025-03-16T14:30:00\"],\n",
+    "    'Temperature (°C)': [330, 340, 350],\n",
+    "    'Intensity (counts)': [1400, 1450, 1500]\n",
+    "})\n",
+    "\n",
+    "with h5py.File('beamline_experiment.h5', 'a') as hdf:\n",
+    "    measurements_group = hdf['measurements']\n",
+    "    timestamps = measurements_group['Timestamp'][:]\n",
+    "    temperatures = measurements_group['Temperature (°C)'][:]\n",
+    "    intensities = measurements_group['Intensity (counts)'][:]\n",
+    "\n",
+    "    new_timestamps = [ts.encode('utf-8') for ts in df_to_add['Timestamp'].values]\n",
+    "    new_temperatures = df_to_add['Temperature (°C)'].values\n",
+    "    new_intensities = df_to_add['Intensity (counts)'].values\n",
+    "\n",
+    "    old_size = measurements_group['Timestamp'].shape[0]\n",
+    "    new_size = old_size + len(new_timestamps)\n",
+    "\n",
+    "    measurements_group['Timestamp'].resize(new_size, axis=0)\n",
+    "    measurements_group['Temperature (°C)'].resize(new_size, axis=0)\n",
+    "    measurements_group['Intensity (counts)'].resize(new_size, axis=0)\n",
+    "\n",
+    "    measurements_group['Timestamp'][old_size:new_size] = new_timestamps\n",
+    "    measurements_group['Temperature (°C)'][old_size:new_size] = new_temperatures\n",
+    "    measurements_group['Intensity (counts)'][old_size:new_size] = new_intensities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -853,10 +887,13 @@
       "Experiment ID: ESRF-2025-03\n",
       "Beamline: ID31\n",
       "Researchers: ['Alice Smith', 'Bob Johnson', 'Charlie Brown']\n",
-      "Lowest T: 295.0 and Highest T: 320.0\n",
+      "Lowest T: 295.0 and Highest T: 350.0\n",
       "For Intensity > 1300:\n",
       "              Timestamp  Temperature (°C)  Intensity (counts)\n",
-      "2  2025-03-16T14:15:00             320.0              1350.0\n"
+      "2  2025-03-16T14:15:00             320.0              1350.0\n",
+      "3  2025-03-16T14:20:00             330.0              1400.0\n",
+      "4  2025-03-16T14:25:00             340.0              1450.0\n",
+      "5  2025-03-16T14:30:00             350.0              1500.0\n"
      ]
     }
    ],
@@ -884,6 +921,97 @@
     "\n",
     "    print(f\"Lowest T: {df['Temperature (°C)'].min()} and Highest T: {df['Temperature (°C)'].max()}\")\n",
     "    print(f\"For Intensity > 1300:\\n {df[df['Intensity (counts)'] > 1300]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Temperature (°C)</th>\n",
+       "      <th>Intensity (counts)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-03-16T14:05:00</td>\n",
+       "      <td>295.0</td>\n",
+       "      <td>1200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-03-16T14:10:00</td>\n",
+       "      <td>310.0</td>\n",
+       "      <td>1250.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-03-16T14:15:00</td>\n",
+       "      <td>320.0</td>\n",
+       "      <td>1350.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-03-16T14:20:00</td>\n",
+       "      <td>330.0</td>\n",
+       "      <td>1400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-03-16T14:25:00</td>\n",
+       "      <td>340.0</td>\n",
+       "      <td>1450.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2025-03-16T14:30:00</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>1500.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Timestamp  Temperature (°C)  Intensity (counts)\n",
+       "0  2025-03-16T14:05:00             295.0              1200.0\n",
+       "1  2025-03-16T14:10:00             310.0              1250.0\n",
+       "2  2025-03-16T14:15:00             320.0              1350.0\n",
+       "3  2025-03-16T14:20:00             330.0              1400.0\n",
+       "4  2025-03-16T14:25:00             340.0              1450.0\n",
+       "5  2025-03-16T14:30:00             350.0              1500.0"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
