Add logins and users data files; update test notebook with new exercises

--- a/test.ipynb
+++ b/test.ipynb
@@ -1447,11 +1447,258 @@
     "\n",
     "```bash\n",
     "read lang\n",
-    "if [$lang == \"Python\"]; \n",
-    "then echo \"Good choice!\"\n",
+    "if [ \"$lang\" == \"Python\" ]; then \n",
+    "echo \"Good choice!\"\n",
     "else echo \"Try Python, it's awesome!\"\n",
     "fi\n",
-    "```\n"
+    "```\n",
+    "    2. For loop\n",
+    "Write a loop that prints the numbers from 5 to 1 (in reverse)\n",
+    "Hint: use {5..1} with a step\n",
+    "\n",
+    "```bash\n",
+    "for i in {5..1..-1}; do\n",
+    "echo \"Number $i\"\n",
+    "done\n",
+    "```\n",
+    "    3. While loop\n",
+    "Create a while loop that counts from 1 to 3 and prints \"Counting: X\"\n",
+    "```bash\n",
+    "counter=1\n",
+    "while [ $counter -le 3 ]; do\n",
+    "echo \"Counting: $counter\"\n",
+    "((counter++))\n",
+    "done\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise Set 4: Simple Bash Script\n",
+    "\n",
+    "Create a file called greet.sh\n",
+    "\n",
+    "Add the following logic inside:\n",
+    "\n",
+    "    Ask the user for their name\n",
+    "\n",
+    "If the name is Dmitrii, print: \"Welcome back, Dmitrii!\"\n",
+    "\n",
+    "Else, print: \"Hello, (name)!\"\n",
+    "\n",
+    "    Make it executable and run it\n",
+    "\n",
+    "```bash\n",
+    "    touch greet.sh && printf '#!/bin/bash\\necho \"What'\\''s your name?\"\\nread name\\nif [ \"$name\" == \"Dmitrii\" ]; then\\n  echo \"Welcome back, Dmitrii!\"\\nelse\\n  echo \"Hello $name!\"\\nfi\\n' > greet.sh && chmod +x greet.sh && ./greet.sh\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Power Tools Exercises\n",
+    "\n",
+    "```bash\n",
+    "cat <<EOF > sample.txt\n",
+    "Name Age Score\n",
+    "Alice 30 85\n",
+    "Bob 25 92\n",
+    "Charlie 35 78\n",
+    "Dmitrii 34 100\n",
+    "Eve 28 66\n",
+    "EOF\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## grep Challenges\n",
+    "    Find all lines that contain the name Dmitrii\n",
+    "```bash\n",
+    "    grep \"Dmitrii\" sample.txt\n",
+    "```\n",
+    "    Find all lines with a score of at least 9 (just try grep without regex for now)\n",
+    "```bash\n",
+    "    awk '$3 >= 90 {print $0}' sample.txt\n",
+    "\n",
+    "    grep -E \"9[0-9]|100\" sample.txt\n",
+    "```\n",
+    "    Find all lines that contain names with capital C\n",
+    "```bash\n",
+    "    grep \"\\bC\" sample.txt\n",
+    "\n",
+    "    grep \"^C\" sample.txt\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## sed Challenges\n",
+    "\n",
+    "    Replace the name Bob with Robert\n",
+    "```bash\n",
+    "sed 's/Bob/Robert/' sample.txt\n",
+    "```\n",
+    "    Delete the first line of the file\n",
+    "```bash\n",
+    "sed '1d' sample.txt\n",
+    "```\n",
+    "    Replace all spaces with commas (CSV format!)\n",
+    "```bash\n",
+    "sed 's/ /,/g' sample.txt\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## awk Challenges\n",
+    "\n",
+    "    Print only the names\n",
+    "```bash\n",
+    "awk '{print $1}' sample.txt\n",
+    "```\n",
+    "    Print names and scores of people with a score above 80\n",
+    "```bash\n",
+    "awk '$3 > 80 {print $1, $3}' sample.txt\n",
+    "```\n",
+    "    Print all names and add 10 years to their age\n",
+    "```bash\n",
+    "awk '{print $1, $2 + 10}' sample.txt\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combo Challenge: Clean + Filter + Transform\n",
+    "\n",
+    "You have a file called people.txt with messy data:\n",
+    "\n",
+    "```bash\n",
+    "#name age score\n",
+    " Alice   30   85\n",
+    "Bob 25 92\n",
+    " Charlie 35 78\n",
+    "Dmitrii 34 100\n",
+    "Eve  28   66\n",
+    "Dan   23 88\n",
+    "```\n",
+    "    Remove the header line (the one starting with #)\n",
+    "\n",
+    "    Trim all extra spaces (make fields nicely separated by a single space)\n",
+    "\n",
+    "    Keep only the people whose names start with D\n",
+    "\n",
+    "    Add 5 years to their age\n",
+    "\n",
+    "    Convert the output to a CSV format: Name,NewAge,Score\n",
+    "    \n",
+    "```bash\n",
+    "sed -E -e '1d' -e 's/^ *//g' -e 's/  +/ /g' -n -e '/^D/p' people.txt | awk '{print $1 \",\" $2+5 \",\" $3}' \n",
+    "```    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BASH Exercise #1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Error Log Analyzer\n",
+    "File: server.log\n",
+    "\n",
+    "```sql\n",
+    "[INFO] 2024-04-01 Server started\n",
+    "[ERROR] 2024-04-01 Failed to connect to DB\n",
+    "[WARNING] 2024-04-02 Low disk space\n",
+    "[ERROR] 2024-04-03 Timeout on port 8080\n",
+    "[INFO] 2024-04-03 Connection restored\n",
+    "```\n",
+    "\n",
+    "```bash\n",
+    "cat <<EOF > server.log\n",
+    "[INFO] 2024-04-01 Server started\n",
+    "[ERROR] 2024-04-01 Failed to connect to DB\n",
+    "[WARNING] 2024-04-02 Low disk space\n",
+    "[ERROR] 2024-04-03 Timeout on port 8080\n",
+    "[INFO] 2024-04-03 Connection restored\n",
+    "EOF\n",
+    "```\n",
+    "\n",
+    "* Extract only the lines with [ERROR]\n",
+    "\n",
+    "```bash\n",
+    "grep \"ERROR\" server.log\n",
+    "```\n",
+    "* Count how many error lines there are\n",
+    "```bash\n",
+    "grep -c \"ERROR\" server.log\n",
+    "\n",
+    "grep \"ERROR\" server.log | wc -l\n",
+    "```\n",
+    "* Extract the date and message from each error line in CSV format like: 2024-04-01,Failed to connect to DB\n",
+    "```bash\n",
+    "grep \"ERROR\" server.log | sed -E 's/.* ([0-9-]+) (.*)/\\1,\\2/'\n",
+    "\n",
+    "awk '/ERROR/ {print $2 \",\" substr($0, index($0,$3))}' server.log\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BASH exercise #2\n",
+    "## Temperature Monitor\n",
+    "File: temps.txt\n",
+    "```sql\n",
+    "2024-04-01 23°C  \n",
+    "2024-04-02 19°C  \n",
+    "2024-04-03 28°C  \n",
+    "2024-04-04 16°C  \n",
+    "2024-04-05 21°C\n",
+    "```\n",
+    "to create:\n",
+    "```bash\n",
+    "cat <<EOF > temps.txt\n",
+    "2024-04-01 23°C\n",
+    "2024-04-02 19°C\n",
+    "2024-04-03 28°C\n",
+    "2024-04-04 16°C\n",
+    "2024-04-05 21°C\n",
+    "EOF\n",
+    "```\n",
+    "\n",
+    "*   Extract lines where the temperature is below 20°C\n",
+    "```bash\n",
+    "sed -E 's/°C//g' temps.txt | awk '$2 < 20 {print $0}'\n",
+    "```\n",
+    "*   Output only the date and temperature (without the °C), in CSV format:\n",
+    "Example: 2024-04-02,19\n",
+    "```bash\n",
+    "sed -E 's/°C//g' temps.txt | awk '{print $1 \",\" $2}'\n",
+    "```\n",
+    "*   Count how many cold days (<20°C)\n",
+    "```bash\n",
+    "sed -E 's/°C//g' temps.txt | awk '$2 < 20 {print $0}' | wc -l\n",
+    "\n",
+    "awk '{gsub(\"°C\",\"\"); if ($2 < 20) count++} END {print count}' temps.txt\n",
+    "```"
    ]
   },
   {
