Add new BASH exercises for user activity analysis and data summarization

--- a/test.ipynb
+++ b/test.ipynb
@@ -1702,6 +1702,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BASH exercise #2\n",
+    "## \"Who’s the most active?\"\n",
+    "File: logins.txt\n",
+    "Imagine this is a log of who logged in and how many times:\n",
+    "\n",
+    "```sql\n",
+    "alice\n",
+    "bob\n",
+    "alice\n",
+    "charlie\n",
+    "bob\n",
+    "bob\n",
+    "```\n",
+    "to create:\n",
+    "```bash\n",
+    "cat <<EOF > logins.txt\n",
+    "alice\n",
+    "bob\n",
+    "alice\n",
+    "charlie\n",
+    "bob\n",
+    "bob\n",
+    "EOF\n",
+    "```\n",
+    "*   Count how many times each user appears\n",
+    "*   Sort users by login count (descending)\n",
+    "*   Print only the most active user\n",
+    "```bash\n",
+    "sort logins.txt | uniq -c | sort -nr | head -1\n",
+    "\n",
+    "sort logins.txt | uniq -c | sort -nr | head -1 | awk '{print $2}'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BASH exercise #3\n",
+    "## Join + Summarize\n",
+    "\n",
+    "Files:\n",
+    "\n",
+    "users.csv\n",
+    "```sql\n",
+    "id,name\n",
+    "1,Alice\n",
+    "2,Bob\n",
+    "3,Charlie\n",
+    "4,Dmitrii\n",
+    "5,Eve\n",
+    "```\n",
+    "\n",
+    "```bash\n",
+    "cat <<EOF > users.csv\n",
+    "id,name\n",
+    "1,Alice\n",
+    "2,Bob\n",
+    "3,Charlie\n",
+    "4,Dmitrii\n",
+    "5,Eve\n",
+    "EOF\n",
+    "```\n",
+    "logins.csv\n",
+    "```sql\n",
+    "user_id,date\n",
+    "2,2024-04-01\n",
+    "4,2024-04-01\n",
+    "2,2024-04-02\n",
+    "3,2024-04-02\n",
+    "2,2024-04-03\n",
+    "4,2024-04-03\n",
+    "```\n",
+    "```bash\n",
+    "cat <<EOF > logins.csv\n",
+    "user_id,date\n",
+    "2,2024-04-01\n",
+    "4,2024-04-01\n",
+    "2,2024-04-02\n",
+    "3,2024-04-02\n",
+    "2,2024-04-03\n",
+    "4,2024-04-03\n",
+    "EOF\n",
+    "``` \n",
+    "\n",
+    "Join logins.csv with users.csv to match user_id with their name\n",
+    "\n",
+    "*   Final columns: date,name\n",
+    "\n",
+    "*   Skip headers\n",
+    "```bash\n",
+    "join -t, -1 1 -2 1 <(sort logins.csv) <(sort users.csv) | awk -F',' '{print $2 \" \" $3}'\n",
+    "```\n",
+    "Count logins per user name\n",
+    "Sort by most logins, print only the most active user\n",
+    "```bash\n",
+    "join -t, -1 1 -2 1 <(sort logins.csv) <(sort users.csv) | awk -F',' '{print $3}' | uniq -c | sort -nr | awk '{print $2}' | head -1\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
